--- a/wusick/bower.json
+++ b/wusick/bower.json
@@ -10,8 +10,7 @@
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
     "angular-sanitize": ">=1.2.*",
-    "angular-route": ">=1.2.*",
-    "angular-webstorage": "10.*"
+    "angular-route": ">=1.2.*"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
