--- a/wusick/package.json
+++ b/wusick/package.json
@@ -1,18 +1,23 @@
 {
   "name": "wusickapp",
   "version": "0.0.0",
+  "license": "CC-BY-NC-4.0",
+  "repository" :
+  { "type" : "git"
+  , "url" : "https://github.com/AFd3z/wusickapp.git"
+  },
   "dependencies": {
     "express": "~4.0.0",
     "morgan": "~1.0.0",
     "body-parser": "~1.0.0",
     "method-override": "~1.0.0",
-    "static-favicon": "~1.0.1",
+    "serve-favicon": "~>2.4.5",
     "cookie-parser": "~1.0.1",
     "express-session": "~1.0.2",
     "errorhandler": "~1.0.0",
     "compression": "~1.0.1",
     "lodash": "~2.4.1",
-    "ejs": "~>2.5.5"
+    "ejs": "~>2.5.7"
   },
   "devDependencies": {
     "grunt": "~0.4.1",
